Adding 'mixed' mode (job creator and executor running together)